# route-bucket-backend

./: .dockerignore  .env  .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  Trunk.toml  diesel.toml  docker-compose.yml  insert_seed_data.sh  start_server.sh
.github/workflows/: cargo.yml
adapters/controller/: Cargo.toml
adapters/controller/src/: lib.rs
adapters/infrastructure/: Cargo.toml
adapters/infrastructure/resources/: download_srtm_datas.sh
adapters/infrastructure/resources/srtm_data/: .gitignore
adapters/infrastructure/src/: external.rs
adapters/infrastructure/src/dto/: operation.rs  permission.rs  route.rs  search_query.rs  segment.rs  user.rs
api/: .dockerignore  Cargo.toml  Dockerfile
api/controller/: Cargo.toml
api/controller/src/: lib.rs  route.rs  user.rs
api/domain/: Cargo.toml
api/domain/src/: external.rs  model.rs  repository.rs
api/domain/src/model/: coordinate.rs  gpx.rs  operation.rs  permission.rs  route.rs  segment.rs  types.rs  user.rs
api/domain/src/model/route/: bounding_box.rs  coordinate.rs  operation.rs  route_gpx.rs  route_info.rs  search_query.rs  segment_list.rs  types.rs
api/domain/src/model/route/segment_list/: operation.rs  segment.rs
api/domain/src/repository/: permission.rs  route.rs  user.rs
api/infrastructure/: Cargo.toml
api/infrastructure/src/: dto.rs  external.rs  lib.rs  repository.rs
api/infrastructure/src/dto/: operation.rs  route.rs  search_query.rs  segment.rs  user.rs
api/infrastructure/src/repository/: permission.rs  route.rs  user.rs
api/resources/: reserved_uids.txt
api/resources/scripts/: download_srtm_datas.sh
api/src/: main.rs  server.rs
api/usecase/: Cargo.toml
api/usecase/src/: lib.rs  route.rs  user.rs
api/usecase/src/route/: requests.rs  responses.rs
api/usecase/src/user/: requests.rs  responses.rs
api/utils/: Cargo.toml
api/utils/src/: error.rs
app/client/: Cargo.toml  index.html
app/client/src/: main.rs
app/db/: schema.sql
app/server/: .dockerignore  Cargo.toml  Dockerfile
app/server/src/: main.rs  server.rs
controller/src/: lib.rs  route.rs
db/: schema.sql
db/manager/: Dockerfile
docker/: api.Dockerfile  download_srtm_datas.sh  ors.Dockerfile  osrm.Dockerfile  wait_for_db.sh
docs/: architecture-ja.md  architecture.md
domain/: Cargo.toml
domain/src/: external.rs  repository.rs
domain/src/model/: gpx.rs  operation.rs  permission.rs  route.rs  segment.rs  types.rs  user.rs
domain/src/model/route/: route_gpx.rs
domain/src/model/route/segment_list/: segment.rs
domain/src/repository/: permission.rs  route.rs
infrastructure/src/: external.rs  repository.rs
infrastructure/src/dto/: operation.rs  route.rs  segment.rs
infrastructure/src/repository/: route.rs
migrations/2021-03-07-045223_create_routes/: down.sql  up.sql
migrations/2021-04-05-091826_create_operations/: down.sql  up.sql
migrations/2021-06-16-075056_create_segments/: down.sql  up.sql
migrations/2021-07-02-070305_remove_waypoint_polyline/: down.sql  up.sql
mysql/: schema.sql
openapi/: root.yml
openapi/components/parameters/: route_id.yml
openapi/components/schemas/: coordinate.yml  elevation_gain.yml  geo_types.yml  linestring.yml  route.yml  route_edit.yml  route_rename.yml
openapi/paths/: routes.yml  routes_add.yml  routes_by_id.yml  routes_clear.yml  routes_move.yml  routes_redo.yml  routes_remove.yml  routes_rename.yml  routes_undo.yml
osrm/: Dockerfile  bicycle.lua  customized.lua
src/: lib.rs  main.rs
src/controller/: route.rs
src/domain/: coordinate.rs  mod.rs  operation.rs  operation_history.rs  polyline.rs  repository.rs  route.rs  route_operation.rs  types.rs
src/domain/model/: coordinate.rs  gpx.rs  linestring.rs  mod.rs  operation.rs  polyline.rs  route.rs  segment.rs  types.rs
src/domain/service/: route.rs
src/infrastructure/: mod.rs  schema.rs
src/infrastructure/dto/: coordinate.rs  mod.rs  operation.rs  route.rs  segment.rs
src/infrastructure/repository/: connection_pool.rs  mod.rs  operation.rs  route.rs  segment.rs
src/lib/: error.rs
src/usecase/: route.rs
src/utils/: error.rs  macros.rs
swagger/: openapi.yml  root.yml
swagger/components/parameters/: pos.yml
swagger/components/schemas/: error.yml  operation_history.yml  polyline.yml  route.yml  route_create.yml  route_edit.yml
swagger/paths/: routes.yml  routes_add.yml  routes_by_id.yml  routes_clear.yml  routes_undo.yml
usecase/: Cargo.toml
usecase/src/: lib.rs  route.rs
usecase/src/route/: responses.rs
utils/: Cargo.toml
utils/src/: error.rs  lib.rs
