[package]
name = "route-bucket-backend"
version = "0.1.0"
authors = ["shugo256 <shugo256@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.0"
actix-web = "3.3.2"
bigdecimal = "0.1.2"
derive_more = "0.99.11"
diesel = { version = "1.4.6", features = ["mysql", "numeric"] }
dotenv = "0.15.0"
env_logger = "0.8.3"
getset = "0.1.1"
nanoid = "0.3.0"
thiserror = "1.0.24"
