[package]
name = "route-bucket-backend"
version = "0.1.0"
authors = ["shugo256 <shugo256@gmail.com>"]
edition = "2018"
default-run = "route-bucket-backend"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.5.4"
actix-rt = "1.1.0"
actix-web = "3.3.2"
byteorder = "1.4.3"
derive_more = "0.99.16"
diesel = { version = "1.4.6", features = ["mysql", "numeric", "r2d2"] }
env_logger = "0.8.3"
geo = "0.17.1"
getset = "0.1.1"
itertools = "0.10.1"
log = "0.4.14"
nanoid = "0.3.0"
num-derive = "0.3.3"
num-traits = "0.2.14"
once_cell = "1.7.2"
polyline = "0.9.0"
r2d2 = "0.8.9"
rayon = "1.5.1"
reqwest = { version = "0.11.3", features = ["blocking", "json"] }
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
thiserror = "1.0.24"
