[package]
name = "route-bucket-backend"
version = "0.1.0"
authors = ["shugo256 <shugo256@gmail.com>"]
edition = "2018"
default-run = "route-bucket-backend"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "controller",
    "domain",
    "infrastructure",
    "usecase",
    "utils",
]

[dependencies]
actix-cors = "0.6.0-beta.3"
actix-web = "4.0.0-beta.10"
env_logger = "0.9.0"
log = "0.4.14"
route-bucket-controller = { path = "./controller" }
route-bucket-domain = { path = "./domain" }
route-bucket-infrastructure = { path = "./infrastructure" }
route-bucket-usecase = { path = "./usecase" }
