[package]
name = "route-bucket-domain"
version = "0.1.0"
authors = ["shugo256 <shugo256@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

async-trait = "0.1.50"
derivative = { version = "2.2.0", optional = true }
derive_more = "0.99.16"
futures = "0.3.16"
geo = "0.17.1"
getset = "0.1.1"
gpx = "0.8.1"
itertools = "0.10.1"
mockall = { version = "0.10.2", optional = true }
nanoid = "0.3.0"
num-traits = "0.2.14"
ordered-float = { version = "2.8.0", features = ["serde"] }
polyline = "0.9.0"
quick-xml = "0.22.0"
rayon = "1.5.1"
route-bucket-utils = { path = "../utils" }
rstest = { version = "0.11.0", optional = true }
serde = { version = "1.0.124", features = ["derive"] }
strum = { version = "0.22.0", features = ["derive"] }

[dev-dependencies]
derivative = "2.2.0"
rstest = "0.11.0"

[features]
fixtures = ["derivative", "rstest"]
mocking = ["mockall"]
testing = ["fixtures", "mocking"]
