[package]
name = "route-bucket-usecase"
version = "0.1.0"
authors = ["shugo256 <shugo256@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.50"
chrono = { version = "0.4.19", features = ["serde"] }
derive_more = "0.99.16"
futures = "0.3.15"
getset = "0.1.1"
itertools = "0.10.1"
route-bucket-domain = { path = "../domain" }
route-bucket-utils = { path = "../utils" }
serde = { version = "1.0.124", features = ["derive"] }
tokio = "1.8.1"
validator = "0.14.0"

[dev-dependencies]
concat-idents = "1.1.3"
mockall = "0.10.2"
route-bucket-domain = { path = "../domain", features = ["testing"] }
rstest = "0.11.0"
tokio = { version = "1.8.1", features = ["macros"] }
