[package]
name = "route-bucket-utils"
version = "0.1.0"
authors = ["shugo256 <shugo256@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.10"
derive_more = "0.99.16"
jsonwebtoken = "7.2.0"
reqwest = "0.11.6"
thiserror = "1.0.24"
validator = "0.14.0"
