[package]
name = "route-bucket-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["wasmbind"] }
route-bucket-domain = { version = "0.1.0", path = "../../domain", features = ["wasm"] }
route-bucket-usecase = { version = "0.1.0", path = "../../usecase", features = ["wasm"] }
stylist = "0.10.0"
yew = "0.19.3"
