[package]
name = "route-bucket-server"
version = "0.1.0"
authors = ["shugo256 <shugo256@gmail.com>"]
edition = "2021"
default-run = "route-bucket-server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.1"
actix-web = "4.0.1"
env_logger = "0.9.0"
log = "0.4.14"
route-bucket-controller = { path = "../../adapters/controller" }
route-bucket-domain = { path = "../../domain" }
route-bucket-infrastructure = { path = "../../adapters/infrastructure" }
route-bucket-usecase = { path = "../../usecase" }
